index_file_fixed!!!

--- a/Projects/lets_travel/Templates/index.html
+++ b/Projects/lets_travel/Templates/index.html
@@ -284,8 +284,10 @@
 							<!-- Destination -->
 							<div class="destination item">
 								<div class="destination_image">
-									<img src="{{baseUrl}}/{{dest.img}}" alt="">
-									<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
+                  <img src="{{baseUrl}}/{{dest.img}}" alt="">
+                  {% if dest.offer %}
+                  <div class="spec_offer text-center"><a href="#">Special Offer</a></div>
+                  {% endif %}
 								</div>
 								<div class="destination_content">
 									<div class="destination_title"><a href="destinations.html">{{dest.name}}</a>
