user_registration_successful

--- a/Projects/lets_travel/Templates/index.html
+++ b/Projects/lets_travel/Templates/index.html
@@ -38,6 +38,7 @@
 										<li><a href="#">Services</a></li>
 										<li><a href="news.html">News</a></li>
 										<li><a href="contact.html">Contact</a></li>
+										<li><a href="accounts/register">Register</a></li>
 									</ul>
 								</nav>
 								<div class="header_phone ml-auto">Call us: 00-56 445 678 33</div>
