--- a/Projects/lets_travel/Templates/index.html
+++ b/Projects/lets_travel/Templates/index.html
@@ -36,9 +36,10 @@
 										<li class="active"><a href="index.html">Home</a></li>
 										<li><a href="about.html">About us</a></li>
 										<li><a href="#">Services</a></li>
-										<li><a href="news.html">News</a></li>
+										<!-- <li><a href="news.html">News</a></li> -->
 										<li><a href="contact.html">Contact</a></li>
 										<li><a href="accounts/register">Register</a></li>
+										<li><a href="accounts/login">Login</a></li>
 									</ul>
 								</nav>
 								<div class="header_phone ml-auto">Call us: 00-56 445 678 33</div>
