--- a/Projects/lets_travel/Templates/register.html
+++ b/Projects/lets_travel/Templates/register.html
@@ -16,6 +16,6 @@
         Confirm Password: <input type="password" name="confirm_password" id="" placeholder="Confirm Password"><br>
         <input type="submit" value="Submit">
     </form>
-    
+    {% for message in messages%}<div> <h3>{{message}}</h3></div> {% endfor%}
 </body>
 </html>
